fixed helpers and completed PCA

--- a/notebooks/06.00-Figure-Code.ipynb
+++ b/notebooks/06.00-Figure-Code.ipynb
@@ -1607,7 +1607,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max([1,5,6])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1652,7 +1672,7 @@
     "    Z = Z.reshape(xx.shape)\n",
     "    contours = ax.contourf(xx, yy, Z, alpha=0.3,\n",
     "                           levels=np.arange(n_classes + 1) - 0.5,\n",
-    "                           cmap='viridis', clim=(y.min(), y.max()),\n",
+    "                           cmap='viridis',\n",
     "                           zorder=1)\n",
     "\n",
     "    ax.set(xlim=xlim, ylim=ylim)\n",
@@ -1680,12 +1700,12 @@
     "        plot_boundaries(0, xlim, ylim)\n",
     "\n",
     "\n",
-    "def plot_tree_interactive(X, y):\n",
-    "    def interactive_tree(depth=5):\n",
+    "def plot_tree_interactive(X, y, depth=[1,5,20]):\n",
+    "    def interactive_tree(depth=max(depth)):\n",
     "        clf = DecisionTreeClassifier(max_depth=depth, random_state=0)\n",
     "        visualize_tree(clf, X, y)\n",
     "\n",
-    "    return interact(interactive_tree, depth=[1, 5])\n",
+    "    return interact(interactive_tree, depth=depth)\n",
     "\n",
     "\n",
     "def randomized_tree_interactive(X, y):\n",
