--- a/notebooks/04.09-Text-and-Annotation.ipynb
+++ b/notebooks/04.09-Text-and-Annotation.ipynb
@@ -41,8 +41,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-23T09:31:35.059272Z",
+     "start_time": "2020-10-23T09:31:34.811929Z"
+    }
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -66,8 +71,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-23T09:31:35.677942Z",
+     "start_time": "2020-10-23T09:31:35.623649Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -208,7 +218,7 @@
        "[14610 rows x 5 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,8 +247,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-23T09:31:36.284488Z",
+     "start_time": "2020-10-23T09:31:36.263984Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -325,7 +340,7 @@
        "  10  4591.700"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,14 +353,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-23T09:31:36.837078Z",
+     "start_time": "2020-10-23T09:31:36.823950Z"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-19-2dbf6a3e8f77>:2: FutureWarning: The pandas.datetime class is deprecated and will be removed from pandas in a future version. Import from datetime module instead.\n",
+      "<ipython-input-4-2dbf6a3e8f77>:2: FutureWarning: The pandas.datetime class is deprecated and will be removed from pandas in a future version. Import from datetime module instead.\n",
       "  births_by_date.index = [pd.datetime(2012, month, day)\n"
      ]
     },
@@ -432,7 +452,7 @@
        "2012-01-10  4591.700"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,8 +473,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-23T09:32:24.803983Z",
+     "start_time": "2020-10-23T09:32:24.528874Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -482,8 +507,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-23T09:32:26.490472Z",
+     "start_time": "2020-10-23T09:32:26.173481Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -807,6 +837,35 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.6"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
