--- a/notebooks/05.15-Learning-More.ipynb
+++ b/notebooks/05.15-Learning-More.ipynb
@@ -87,7 +87,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -101,7 +101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.10.1"
   }
  },
  "nbformat": 4,
