--- a/notebooks/02.04-Computation-on-arrays-aggregates.ipynb
+++ b/notebooks/02.04-Computation-on-arrays-aggregates.ipynb
@@ -217,7 +217,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Aggregation functions take an additional argument specifying the *axis* along which the aggregate is computed. For example, we can find the minimum value within each column by specifying ``axis=0``:"
+    "Aggregation functions take an additional argument specifying the *axis* along which the aggregate is computed. For example, we can find the minimum value within each column by specifying ``axis=0`` or simply `min(0)`:"
    ]
   },
   {
@@ -226,7 +226,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "M.min(axis=0)"
+    "M.min(axis=0)\n",
+    "M.min(0)"
    ]
   },
   {
@@ -244,7 +245,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "M.max(axis=1)"
+    "M.max(axis=1)\n",
+    "M.max(1)"
    ]
   },
   {
@@ -309,7 +311,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!head -4 data/president_heights.csv"
+    "!head -4 ../data/president_heights.csv"
    ]
   },
   {
@@ -326,7 +328,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "data = pd.read_csv('data/president_heights.csv')\n",
+    "data = pd.read_csv('../data/president_heights.csv')\n",
     "heights = np.array(data['height(cm)'])\n",
     "print(heights)"
    ]
