--- a/notebooks/02.08-Sorting.ipynb
+++ b/notebooks/02.08-Sorting.ipynb
@@ -337,7 +337,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dist_sq = np.sum((X[:, np.newaxis, :] - X[np.newaxis, :, :]) ** 2, axis=-1)"
+    "dist_sq = np.sum((X[:, None, :] - X[None, :, :]) ** 2, axis=-1)\n",
+    "dist_sq"
    ]
   },
   {
@@ -354,8 +355,23 @@
    "outputs": [],
    "source": [
     "# for each pair of points, compute differences in their coordinates\n",
-    "differences = X[:, np.newaxis, :] - X[np.newaxis, :, :]\n",
+    "# the first dim is the points dimension, which has to be expanded for\n",
+    "# broadcasting to create a 2d point matrix\n",
+    "differences = X[:, None, :] - X[None, :, :]\n",
     "differences.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# this is analog to performing the outer difference for both the x and y coords\n",
+    "# and combining later\n",
+    "diffX = np.subtract.outer(X[:,0],X[:,0])\n",
+    "diffY = np.subtract.outer(X[:,1],X[:,1])\n",
+    "diffX.shape"
    ]
   },
   {
@@ -366,7 +382,11 @@
    "source": [
     "# square the coordinate differences\n",
     "sq_differences = differences ** 2\n",
-    "sq_differences.shape"
+    "\n",
+    "# sum the coordinate differences to get the squared distance\n",
+    "dist_sq = sq_differences.sum(-1)\n",
+    "dist_sq.shape\n",
+    "dist_sq[:3,:3]"
    ]
   },
   {
@@ -375,9 +395,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sum the coordinate differences to get the squared distance\n",
-    "dist_sq = sq_differences.sum(-1)\n",
-    "dist_sq.shape"
+    "# analog with outer matrices:\n",
+    "# square both matrices separately and add together\n",
+    "dist_sq2 = diffX ** 2 + diffY **2\n",
+    "dist_sq2[:3,:3]"
    ]
   },
   {
@@ -430,7 +451,8 @@
    "outputs": [],
    "source": [
     "K = 2\n",
-    "nearest_partition = np.argpartition(dist_sq, K + 1, axis=1)"
+    "nearest_partition = np.argpartition(dist_sq, K + 1, axis=1)\n",
+    "nearest_partition"
    ]
   },
   {
@@ -446,16 +468,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.scatter(X[:, 0], X[:, 1], s=100)\n",
+    "_ = plt.scatter(X[:, 0], X[:, 1], s=100)\n",
     "\n",
-    "# draw lines from each point to its two nearest neighbors\n",
-    "K = 2\n",
+    "# draw lines from each point to its three nearest neighbors\n",
+    "K = 3\n",
     "\n",
     "for i in range(X.shape[0]):\n",
     "    for j in nearest_partition[i, :K+1]:\n",
     "        # plot a line from X[i] to X[j]\n",
     "        # use some zip magic to make it happen:\n",
-    "        plt.plot(*zip(X[j], X[i]), color='black')"
+    "        _ = plt.plot(*zip(X[j], X[i]), color='black')"
    ]
   },
   {
