--- a/notebooks/02.01-Understanding-Data-Types.ipynb
+++ b/notebooks/02.01-Understanding-Data-Types.ipynb
@@ -381,7 +381,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 3.14,  4.  ,  2.  ,  3.  ])"
+       "array([3.14, 4.  , 2.  , 3.  ])"
       ]
      },
      "execution_count": 9,
@@ -408,7 +408,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 1.,  2.,  3.,  4.], dtype=float32)"
+       "array([1., 2., 3., 4.], dtype=float32)"
       ]
      },
      "execution_count": 10,
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
        "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,18 +490,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 1.,  1.,  1.,  1.,  1.],\n",
-       "       [ 1.,  1.,  1.,  1.,  1.],\n",
-       "       [ 1.,  1.,  1.,  1.,  1.]])"
+       "array([[1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1.]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,18 +513,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 3.14,  3.14,  3.14,  3.14,  3.14],\n",
-       "       [ 3.14,  3.14,  3.14,  3.14,  3.14],\n",
-       "       [ 3.14,  3.14,  3.14,  3.14,  3.14]])"
+       "array([[3.14, 3.14, 3.14, 3.14, 3.14],\n",
+       "       [3.14, 3.14, 3.14, 3.14, 3.14],\n",
+       "       [3.14, 3.14, 3.14, 3.14, 3.14]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,6 +532,46 @@
    "source": [
     "# Create a 3x5 array filled with 3.14\n",
     "np.full((3, 5), 3.14)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2, 2, 2, 2, 2],\n",
+       "       [2, 2, 2, 2, 2],\n",
+       "       [2, 2, 2, 2, 2],\n",
+       "       [2, 2, 2, 2, 2]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 1, 1, 1, 1],\n",
+       "       [1, 1, 1, 1, 1],\n",
+       "       [1, 1, 1, 1, 1],\n",
+       "       [1, 1, 1, 1, 1]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create an array of the shape of another array filled with a value\n",
+    "A = np.full((4,5), 2)\n",
+    "A\n",
+    "B = np.full_like(A, 1)\n",
+    "B"
    ]
   },
   {
@@ -766,7 +806,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -780,7 +820,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
