--- a/notebooks/02.03-Computation-on-arrays-ufuncs.ipynb
+++ b/notebooks/02.03-Computation-on-arrays-ufuncs.ipynb
@@ -60,9 +60,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.16666667, 1.        , 0.25      , 0.25      , 0.125     ])"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "np.random.seed(0)\n",
@@ -88,9 +99,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "686 ms ± 724 µs per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
    "source": [
     "big_array = np.random.randint(1, 100, size=1000000)\n",
     "%timeit compute_reciprocals(big_array)"
@@ -122,9 +141,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.16666667 1.         0.25       0.25       0.125     ]\n",
+      "[0.16666667 1.         0.25       0.25       0.125     ]\n"
+     ]
+    }
+   ],
    "source": [
     "print(compute_reciprocals(values))\n",
     "print(1.0 / values)"
@@ -139,9 +167,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "721 µs ± 5.9 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "%timeit (1.0 / big_array)"
    ]
@@ -352,6 +388,15 @@
    "source": [
     "x = np.array([3 - 4j, 4 - 3j, 2 + 0j, 0 + 1j])\n",
     "np.abs(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l = np.arange(1000)"
    ]
   },
   {
@@ -745,7 +790,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.10.5"
   },
   "varInspector": {
    "cols": {
